# tee_readwrite

./: Cargo.toml  README.md
src/: lib.rs  write.rs
